--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".vim/bundle/python-mode"]
 	path = .vim/bundle/python-mode
 	url = git://github.com/klen/python-mode.git
+[submodule ".vim/bundle/vim-bundle-mako"]
+	path = .vim/bundle/vim-bundle-mako
+	url = git://github.com/sophacles/vim-bundle-mako.git
