--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule ".vim/bundle/vim-bundle-mako"]
 	path = .vim/bundle/vim-bundle-mako
 	url = git://github.com/sophacles/vim-bundle-mako.git
+[submodule ".vim/bundle/vim-pathogen"]
+	path = .vim/bundle/vim-pathogen
+	url = git://github.com/tpope/vim-pathogen.git
