comment out pychart: causes pip warnings

--- a/.pip/pip.conf
+++ b/.pip/pip.conf
@@ -2,6 +2,6 @@
 download-cache = ~/.pip/dlcache
 
 [install]
-find-links = http://download.gna.org/pychart/
+#find-links = http://download.gna.org/pychart/
 #allow-external = pychart
-allow-unverified = pychart
+#allow-unverified = pychart
