--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule ".vim/bundle/vim-commentary"]
 	path = .vim/bundle/vim-commentary
 	url = git://github.com/tpope/vim-commentary.git
+[submodule "opt/git-remote-bzr"]
+	path = opt/git-remote-bzr
+	url = git://github.com/felipec/git-remote-bzr.git
+[submodule "opt/git-remote-hg"]
+	path = opt/git-remote-hg
+	url = git://github.com/felipec/git-remote-bzr.git
