--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@ bind-key C-a send-prefix
 
 bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
 
-set-option mouse-resize-pane on
-set-option mouse-select-pane on
-set-option mouse-select-window on
+set-option -g mouse-resize-pane on
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
 
-set-window-option mode-mouse on
+set-window-option -g mode-mouse on
