--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,5 +7,6 @@ bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
 set-option -g mouse-resize-pane on
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
+set-option -g default-terminal "screen-256color"
 
 set-window-option -g mode-mouse on
