rename alias pullff to puff
Apart from being cuter, it should become by default pull command so it's good
to make it shorter.

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 	ui = auto
 [alias]
 	ff = merge --ff-only
-	pullff = pull --ff-only
+	puff = pull --ff-only
 	noff = merge --no-ff
 	l = log --pretty=onelep --graph
 	la = log --pretty=onelep --graph --all
