--- a/postgresql/pg_hba.conf
+++ b/postgresql/pg_hba.conf
@@ -1,3 +1,3 @@
 local   all             postgres                                peer
 local   all             all                                     peer
-host    all             all             127.0.0.1/32            reject
+host    all             all             127.0.0.1/32            md5
