--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "opt/hg-prompt"]
 	path = opt/hg-prompt
 	url = hg::https://bitbucket.org/sjl/hg-prompt
+[submodule ".vim/bundle/vim-unimpaired"]
+	path = .vim/bundle/vim-unimpaired
+	url = git://github.com/tpope/vim-unimpaired.git
