--- a/.gitconfig
+++ b/.gitconfig
@@ -7,10 +7,22 @@
 	ff = merge --ff-only
 	puff = pull --ff-only
 	noff = merge --no-ff
+
 	l = log --pretty=onelep --graph
 	la = log --pretty=onelep --graph --all
 	r = log --pretty=onelep --graph -8
 	ra = log --pretty=onelep --graph -8 --all
+
+        amend = commit --amend
+        aa = add --all
+        ap = add -p
+        fap = fetch --all --prune
+        b = branch
+        d = diff
+        d = diff --cached
+        st = status
+        ci = commit
+        co = checkout
 [merge]
         tool = vimdiff
 	defaultToUpstream = true
