--- a/.pip/pip.conf
+++ b/.pip/pip.conf
@@ -1,5 +1,7 @@
 [global]
 download-cache = ~/.pip/dlcache
+wheel-dir = /Users/lep/.pip/wheelhouse
+find-links = file:///Users/lep/.pip/wheelhouse
 
 [install]
 #find-links = http://download.gna.org/pychart/
