--- a/.gitconfig
+++ b/.gitconfig
@@ -22,6 +22,7 @@
         dc = diff --cached
         st = status
         ci = commit --verbose
+        ca = commit --verbose --all
         co = checkout
 [merge]
         tool = vimdiff
