--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule ".vim/bundle/vim-io"]
 	path = .vim/bundle/vim-io
 	url = git://github.com/andreimaxim/vim-io.git
+[submodule ".vim/bundle/vim-cucumber"]
+	path = .vim/bundle/vim-cucumber
+	url = git://github.com/tpope/vim-cucumber.git
