get rid of git-remote-hg
This is because of unsolved issues with recent mercurial:
https://github.com/felipec/git-remote-hg/pull/28

--- a/.hgrc
+++ b/.hgrc
@@ -3,4 +3,4 @@ username = Leonardo Pistone <leonardo.pistone@camptocamp.com>
 ignore = ~/.hgignore
 
 [extensions]
-prompt = ~/dotfiles/opt/hg-prompt/prompt.py
+prompt = ~/opt/hg-prompt/prompt.py
