--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule ".vim/bundle/dbext.vim"]
 	path = .vim/bundle/dbext.vim
 	url = git://github.com/vim-scripts/dbext.vim.git
+[submodule ".vim/bundle/vim-flagship"]
+	path = .vim/bundle/vim-flagship
+	url = git://github.com/tpope/vim-flagship.git
