simpler mouse options for tmux 2.1

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,9 +4,5 @@ bind-key C-a send-prefix
 
 bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
 
-set-option -g mouse-resize-pane on
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
+set-option -g mouse on
 set-option -g default-terminal "screen-256color"
-
-set-window-option -g mode-mouse on
