--- a/.gnupg/dirmngr.conf
+++ b/.gnupg/dirmngr.conf
@@ -1,3 +1,4 @@
 keyserver hkp://keys.gnupg.net
+# keyserver hkp://keyserver.ubuntu.com
 # hkps://hkps.pool.sks-keyservers.net
 # hkp-cacert /path/to/CA/sks-keyservers.netCA.pem
