--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -1,7 +1,14 @@
 require-cross-certification
 charset utf-8
 keyserver-options auto-key-retrieve
+auto-key-locate hkp://keys.gnupg.net
+# auto-key-locate keyserver doesn't work
 
 verbose
 
 list-options show-usage
+
+# maybe later:
+# default-key 1234
+# default-recipient-self
+# verify-options pka-lookups
