de-comment mpd setup

--- a/.mpd/mpd.conf
+++ b/.mpd/mpd.conf
@@ -1,8 +1,8 @@
 music_directory            "~/beets"
-# playlist_directory         "~/.mpd/playlists"
-# db_file                    "~/.mpd/database"
+playlist_directory         "~/.mpd/playlists"
+db_file                    "~/.mpd/database"
 log_file                   "~/.mpd/log"
-# pid_file                   "~/.mpd/pid"
+pid_file                   "~/.mpd/pid"
 # log_level                  "secure"  # default, secure, verbose
 # auto_update                "yes"       # default: no
 
