try to bring back ctrl-arrow

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,3 +6,4 @@ bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
 
 set-option -g mouse on
 set-option -g default-terminal "screen-256color"
+set-window-option -g xterm-keys on
