--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,8 @@ bind-key C-a send-prefix
 
 bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
 
-set-option -g mouse on
 set-option -g default-terminal "screen-256color"
+set-option -g escape-time 20
+set-option -g mouse on
+
 set-window-option -g xterm-keys on
