geeknode weechat config
Note: ssl check disabled because they have an unrecognised AND expired
cert (from CACert)

--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -180,3 +180,42 @@ freenode.default_msg_kick
 freenode.default_msg_part
 freenode.default_msg_quit
 freenode.notify
+geeknode.addresses = "irc.geeknode.org/6697"
+geeknode.proxy
+geeknode.ipv6
+geeknode.ssl = on
+geeknode.ssl_cert
+geeknode.ssl_priorities
+geeknode.ssl_dhkey_size
+geeknode.ssl_fingerprint
+geeknode.ssl_verify = off
+geeknode.password
+geeknode.capabilities
+geeknode.sasl_mechanism
+geeknode.sasl_username = "lep"
+geeknode.sasl_password = "${sec.data.geeknode_password}"
+geeknode.sasl_key
+geeknode.sasl_timeout
+geeknode.sasl_fail
+geeknode.autoconnect = on
+geeknode.autoreconnect
+geeknode.autoreconnect_delay
+geeknode.nicks = "lep,lep_,lep__"
+geeknode.nicks_alternate
+geeknode.username
+geeknode.realname
+geeknode.local_hostname
+geeknode.command
+geeknode.command_delay
+geeknode.autojoin = "#c2c-blagues,#c2c-business"
+geeknode.autorejoin
+geeknode.autorejoin_delay
+geeknode.connection_timeout
+geeknode.anti_flood_prio_high
+geeknode.anti_flood_prio_low
+geeknode.away_check
+geeknode.away_check_max_nicks
+geeknode.default_msg_kick
+geeknode.default_msg_part
+geeknode.default_msg_quit
+geeknode.notify
