freenode: autojoin, not autoconnect

--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -168,7 +168,7 @@ freenode.realname = "Leonardo Pistone"
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin
+freenode.autojoin = "#oca,#openobject"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
@@ -197,7 +197,7 @@ geeknode.sasl_password = "${sec.data.geeknode_password}"
 geeknode.sasl_key
 geeknode.sasl_timeout
 geeknode.sasl_fail
-geeknode.autoconnect = on
+geeknode.autoconnect = off
 geeknode.autoreconnect
 geeknode.autoreconnect_delay
 geeknode.nicks = "lep,lep_,lep__"
