--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,5 +7,6 @@ bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
 set-option -g default-terminal "screen-256color"
 set-option -g escape-time 20
 set-option -g mouse on
+set-option -g history-limit 10000
 
 set-window-option -g xterm-keys on
