Revert "no need for reattach-user-namespace since yosemite"
This reverts commit c303a21d8323ef45215bb7536bee9601de9ef8ff.

https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/issues/53

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,3 +10,5 @@ set-option -g mouse on
 set-option -g history-limit 10000
 
 set-window-option -g xterm-keys on
+
+if-shell 'test "$(uname -s)" = Darwin' 'source-file ~/.tmux-osx.conf'
