--- a/.gitmodules
+++ b/.gitmodules
@@ -52,9 +52,6 @@
 [submodule ".vim/bundle/vim-sensible"]
 	path = .vim/bundle/vim-sensible
 	url = git://github.com/tpope/vim-sensible.git
-[submodule ".vim/bundle/tabular"]
-	path = .vim/bundle/tabular
-	url = git://github.com/godlygeek/tabular.git
 [submodule ".vim/bundle/vim-dispatch"]
 	path = .vim/bundle/vim-dispatch
 	url = git://github.com/tpope/vim-dispatch.git
@@ -82,9 +79,6 @@
 [submodule ".vim/bundle/jedi-vim"]
 	path = .vim/bundle/jedi-vim
 	url = git://github.com/davidhalter/jedi-vim.git
-[submodule ".vim/bundle/python-mode"]
-	path = .vim/bundle/python-mode
-	url = git://github.com/klen/python-mode.git
 [submodule ".vim/bundle/vim-jinja"]
 	path = .vim/bundle/vim-jinja
 	url = git://github.com/mitsuhiko/vim-jinja.git
@@ -94,3 +88,6 @@
 [submodule ".vim/bundle/django.vim"]
 	path = .vim/bundle/django.vim
 	url = git://github.com/vim-scripts/django.vim.git
+[submodule ".vim/bundle/deoplete"]
+	path = .vim/bundle/deoplete
+	url = git://github.com/Shougo/deoplete.nvim.git
