ignore more gnupg 2.0 stuff

--- a/.gnupg/.gitignore
+++ b/.gnupg/.gitignore
@@ -3,8 +3,10 @@ openpgp-revocs.d/
 private-keys-v1.d/
 pubring.kbx
 pubring.kbx~
+pubring.gpg
+pubring.gpg~
+secring.gpg
 random_seed
-reader_0.status
-reader_-1.status
+*.status
 trustdb.gpg
 sshcontrol
