--- a/.gitconfig
+++ b/.gitconfig
@@ -20,6 +20,7 @@
         ci = commit --verbose
         ca = commit --verbose --all
         co = checkout
+	ff = merge --ff-only
 [merge]
         tool = vimdiff
 	defaultToUpstream = true
