--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,10 +4,10 @@ bind-key C-a send-prefix
 
 bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
 
-set-option -g default-terminal "screen-256color"
 set-option -g escape-time 20
 set-option -g mouse on
 set-option -g history-limit 10000
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set-window-option -g xterm-keys on
 
