--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,4 +11,4 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set-window-option -g xterm-keys on
 
-if-shell 'test "$(uname -s)" = Darwin' 'source-file ~/.tmux-osx.conf'
+if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reattach-to-user-namespace -l zsh"'
