vimrc: alternative colorscheme for vim<8
On vim<8, tell pathogen to load manually a 256-color colorscheme. On
vim8, colorschemes can live in pack/*/opt and don't need to be in the
runtimepath.

--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,12 @@
 [submodule ".vim/pack/main/opt/vim-pathogen"]
 	path = .vim/pack/main/opt/vim-pathogen
 	url = git@github.com:tpope/vim-pathogen
+[submodule ".vim/pack/main/opt/flattened"]
+	path = .vim/pack/main/opt/flattened
+	url = git@github.com:romainl/flattened
+[submodule ".vim/pack/main/opt/moonshine-vim"]
+	path = .vim/pack/main/opt/moonshine-vim
+	url = git@github.com:KKPMW/moonshine-vim
+[submodule ".vim/pack/main/opt/Apprentice"]
+	path = .vim/pack/main/opt/Apprentice
+	url = git@github.com:romainl/Apprentice
