--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,8 +7,10 @@ bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
 set-option -g escape-time 20
 set-option -g mouse on
 set-option -g history-limit 10000
+set-option -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set-window-option -g xterm-keys on
 
-if-shell 'test "$(uname -s)" = Darwin' 'set-option -g default-command "exec reattach-to-user-namespace -l zsh"'
+if-shell 'test "$(uname -s)" = Darwin' \
+  'set-option -g default-command "exec reattach-to-user-namespace -l zsh"'
