new email in hg

--- a/.hgrc
+++ b/.hgrc
@@ -1,5 +1,5 @@
 [ui]
-username = Leonardo Pistone <lpistone@gmail.com>
+username = Leonardo Pistone <leonardo@pistone.me>
 ignore = ~/.hgignore
 
 [extensions]
