Use rsync's default name .cvsignore
Tip found in Tim Pope's Pathogen documentation.

--- a/.gitconfig
+++ b/.gitconfig
@@ -20,7 +20,7 @@
 [merge]
 	tool = vimdiff
 [core]
-	excludesfile = ~/.gitignore_global
+	excludesfile = ~/.cvsignore
 [pretty]
   # this looks similar to gary bernhardt's magic, without external
 	# magic.
