--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,5 +9,6 @@ set-option -g mouse on
 set-option -g history-limit 10000
 set-option -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -g focus-events on
 
 set-window-option -g xterm-keys on
