--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
-set-option -g prefix C-a
+set-option -g prefix C-q
 unbind-key C-b
-bind-key C-a send-prefix
+bind-key C-q send-prefix
 
 bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
 
