fancier true colors and italic
For this to work, I am using the terminal definitions iterm2-direct and
tmux-iterm2-direct that needs to be loaded once. At least iterm2-direct
is included with the newest ncurses, but that's now included with macos.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,8 +7,8 @@ bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
 set-option -g escape-time 20
 set-option -g mouse on
 set-option -g history-limit 10000
-set-option -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -g default-terminal "tmux-iterm2-direct"
+set-option -ga terminal-overrides "*:Tc"
 set-option -g focus-events on
 
 set-window-option -g xterm-keys on
