--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,11 +4,15 @@ bind-key C-q send-prefix
 
 bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
 
-set-option -g escape-time 20
-set-option -g mouse on
-set-option -g history-limit 10000
+# Server options
 set-option -g default-terminal "tmux-iterm2-direct"
-set-option -ga terminal-overrides "*:Tc"
+set-option -g escape-time 20
 set-option -g focus-events on
+set-option -ga terminal-overrides "*:Tc"
 
+# Session options
+set-option -g history-limit 10000
+set-option -g mouse on
+
+# Window options
 set-window-option -g xterm-keys on
