Classify and fix tmux options, remove source-file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,8 @@
-set-option -g prefix C-q
-unbind-key C-b
-bind-key C-q send-prefix
-
-bind-key R source-file ~/.tmux.conf \; display-message "source-file done"
-
 # Server options
-set-option -g default-terminal "tmux-iterm2-direct"
-set-option -g escape-time 20
-set-option -g focus-events on
-set-option -ga terminal-overrides "*:Tc"
+set-option -s default-terminal "tmux-iterm2-direct"
+set-option -s escape-time 20
+set-option -s focus-events on
+set-option -sa terminal-overrides "*:Tc"
 
 # Session options
 set-option -g history-limit 10000
@@ -16,3 +10,8 @@ set-option -g mouse on
 
 # Window options
 set-window-option -g xterm-keys on
+
+# Change tmux prefix
+set-option -g prefix C-q
+unbind-key C-b
+bind-key C-q send-prefix
