--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ set-option -s focus-events on
 set-option -sa terminal-overrides "*:Tc"
 
 # Session options
+set-option -g display-time 5000
 set-option -g history-limit 10000
 set-option -g mouse on
 
