--- a/postgresql/postgresql.conf
+++ b/postgresql/postgresql.conf
@@ -1,4 +1,7 @@
-fsync = 'off'
-synchronous_commit = 'off'
+# These are non-durable settings for local development where it's OK to lose
+# and corrupt data.
 
-full_page_writes = 'off'
+fsync = off
+synchronous_commit = off
+full_page_writes = off
+max_prepared_transactions = 32    # default is 0 which disables them
