--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule ".vim/pack/main/opt/gruvbox"]
 	path = .vim/pack/main/opt/gruvbox
 	url = https://github.com/morhetz/gruvbox.git
+[submodule ".vim/pack/main/start/ale"]
+	path = .vim/pack/main/start/ale
+	url = https://github.com/w0rp/ale.git
