Simpler approach to terminal italics
The previous approacth of stealing terminfo from a newer version of
ncurses caused trouble, for example 'tput colors' returned 0.

Stolen from:

https://medium.com/@dubistkomisch/how-to-actually-get-italics-and-true-colour-to-work-in-iterm-tmux-vim-9ebe55ebc2be

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # Server options
-set-option -s default-terminal "tmux-iterm2-direct"
+set-option -s default-terminal "tmux-256color"
 set-option -s escape-time 20
 set-option -s focus-events on
 set-option -sa terminal-overrides "*:Tc"
