Tmux: set window title

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,7 @@ set-option -sa terminal-overrides "*:Tc"
 set-option -g display-time 5000
 set-option -g history-limit 10000
 set-option -g mouse on
+set-option -g set-titles on
 
 # Window options
 set-window-option -g xterm-keys on
