--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,7 @@ set-option -g display-time 5000
 set-option -g history-limit 10000
 set-option -g mouse on
 set-option -g set-titles on
+set-option -g status-style bg=colour237,fg=colour250
 
 # Window options
 set-window-option -g xterm-keys on
