Toggle tmux status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,3 +18,6 @@ set-window-option -g xterm-keys on
 set-option -g prefix C-q
 unbind-key C-b
 bind-key C-q send-prefix
+
+# Key bindings
+bind-key b set-option status
