Use default instead of tmux-only option
The comma also appears in the tmux documentation.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 set-option -s default-terminal "tmux-256color"
 set-option -s escape-time 20
 set-option -s focus-events on
-set-option -sa terminal-overrides "*:Tc"
+set-option -sa terminal-overrides "*:RGB"
 
 # Session options
 set-option -g display-time 5000
