Use GPG by default

--- a/.gitconfig
+++ b/.gitconfig
@@ -25,3 +25,9 @@
 	# I add a tab at the beginning to prevent the graph to break column
 	# alignment. That could be considered a bug in git.
 	onelep = %x09%h %Cgreen%<(20,trunc)%ar %Cblue%<(20,trunc)%an %Cred%d%Creset %s
+[commit]
+	gpgsign = true
+[tag]
+	gpgsign = true
+[push]
+	gpgsign = if-asked
