--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,3 +21,20 @@ bind-key C-q send-prefix
 
 # Key bindings
 bind-key b set-option status
+bind-key R source-file ~/.tmux.conf \; display-message "configuration reloaded"
+
+# moving between panes
+bind-key -r h select-pane -L
+bind-key -r j select-pane -D
+bind-key -r k select-pane -U
+bind-key -r l select-pane -R
+
+# resizing panes
+bind-key -r C-h resize-pane -L
+bind-key -r C-j resize-pane -D
+bind-key -r C-k resize-pane -U
+bind-key -r C-l resize-pane -R
+bind-key -r M-h resize-pane -L 5
+bind-key -r M-j resize-pane -D 5
+bind-key -r M-k resize-pane -U 5
+bind-key -r M-l resize-pane -R 5
