--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,9 +10,16 @@ set-option -g history-limit 10000
 set-option -g mouse on
 set-option -g set-titles on
 set-option -g status-style bg=colour237,fg=colour250
+set-option -g focus-events on
+set-option -g status-keys emacs  # makes more sense there than vi
 
 # Window options
 set-window-option -g mode-keys vi
+set-window-option -g aggressive-resize on
+set-window-option -g window-status-style fg=cyan
+set-window-option -g window-status-current-style fg=red,bold
+set-window-option -g pane-active-border-style bg=blue
+set-window-option -g monitor-activity on
 
 # Change tmux prefix
 set-option -g prefix C-q
@@ -38,3 +45,13 @@ bind-key -r M-h resize-pane -L 5
 bind-key -r M-j resize-pane -D 5
 bind-key -r M-k resize-pane -U 5
 bind-key -r M-l resize-pane -R 5
+
+# scroll one line at the time with the mouse wheel, not 5
+bind-key -T copy-mode WheelUpPane select-pane \; send-keys -X scroll-up
+bind-key -T copy-mode WheelDownPane select-pane \; send-keys -X scroll-up
+bind-key -T copy-mode-vi WheelUpPane select-pane \; send-keys -X scroll-up
+bind-key -T copy-mode-vi WheelDownPane select-pane \; send-keys -X scroll-up
+
+# don't immediately exit copy mode after dragging
+bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-selection-no-clear
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-no-clear
