Fix reversed tmux scrolling

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,9 +48,9 @@ bind-key -r M-l resize-pane -R 5
 
 # scroll one line at the time with the mouse wheel, not 5
 bind-key -T copy-mode WheelUpPane select-pane \; send-keys -X scroll-up
-bind-key -T copy-mode WheelDownPane select-pane \; send-keys -X scroll-up
+bind-key -T copy-mode WheelDownPane select-pane \; send-keys -X scroll-down
 bind-key -T copy-mode-vi WheelUpPane select-pane \; send-keys -X scroll-up
-bind-key -T copy-mode-vi WheelDownPane select-pane \; send-keys -X scroll-up
+bind-key -T copy-mode-vi WheelDownPane select-pane \; send-keys -X scroll-down
 
 # don't immediately exit copy mode after dragging
 bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-selection-no-clear
