--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,3 +55,4 @@ bind-key -T copy-mode-vi WheelDownPane select-pane \; send-keys -X scroll-down
 # don't immediately exit copy mode after dragging
 bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-selection-no-clear
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-no-clear
+bind-key -T root MouseDragEnd1Pane send-keys -X copy-selection-no-clear
