Default pull to ff
I have been doing this through aliases for a long time, so I welcome
this addition to git. I think that the default "merge" strategy is never
something I want to happen magically. If the remote diverged, I want git
to stop and let me know, which is exactly what --ff-only does. I can
then decide to merge, rebase, or even rolling back my changes depending
on the situation.

--- a/.gitconfig
+++ b/.gitconfig
@@ -2,8 +2,6 @@
 	name = Leonardo Pistone
 	useconfigonly = true
 [alias]
-	puff = pull --ff-only
-
 	l = log --pretty=onelep --graph
 	la = log --pretty=onelep --graph --all
 
@@ -15,7 +13,6 @@
 	dc = diff --cached
 	ci = commit --verbose
 	co = checkout
-	ff = merge --ff-only
 	st = status -sb
 [merge]
 	tool = vimdiff
@@ -36,3 +33,5 @@
 [feature]
 	manyFiles = true
 	experimental = true
+[pull]
+	ff = only
