Get Signal cask

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -62,6 +62,7 @@
           - mullvadvpn
           - rectangle
           - skype
+          - signal
           - steam
           - telegram
           - tomighty
