--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -29,7 +29,6 @@
           - fd
           - fzf
           - git
-          - gnupg
           - jq
           - kubernetes-cli
           - less
@@ -57,6 +56,7 @@
           - firefox
           - font-jetbrains-mono
           - google-cloud-sdk
+          - gpg-tools
           - intellij-idea-ce
           - iterm2
           - mullvadvpn
