--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -30,6 +30,7 @@
           - fzf
           - git
           - jq
+          - kube-ps1
           - kubernetes-cli
           - less
           - libressl
