--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -56,6 +56,7 @@
           - firefox
           - font-jetbrains-mono
           - godot
+          - google-backup-and-sync
           - google-cloud-sdk
           - gpg-suite
           - intellij-idea-ce
@@ -63,6 +64,7 @@
           - macvim
           - mullvadvpn
           - obs
+          - raspberry-pi-imager
           - rectangle
           - skype
           - signal
