Tmux: send shorter titles that fit on the touchbar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,10 @@ set-option -sa terminal-overrides "xterm*:ritm=\e[23m"
 set-option -g display-time 5000
 set-option -g history-limit 10000
 set-option -g mouse on
-set-option -g set-titles on
+
+set-option -g set-titles on                  # set title of iterm2 window and touch bar
+set-option -g set-titles-string "#S:#I:#W"   # shorter than the default
+
 set-option -g status-style bg=colour237,fg=colour250
 set-option -g focus-events on
 set-option -g status-keys emacs  # makes more sense there than vi
