--- a/ansible/playbooks/main.yml
+++ b/ansible/playbooks/main.yml
@@ -32,6 +32,7 @@
           - ansible
           - ansible-lint
           - bash
+          - cookiecutter
           - curl
           - fd
           - fzf
