--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ set-option -s default-terminal "tmux-256color"
 set-option -s escape-time 1
 set-option -s focus-events on
 set-option -s set-clipboard on
+set-option -sg extended-keys always
 set-option -sa terminal-overrides "xterm*:RGB"
 set-option -sa terminal-overrides "xterm*:sitm=\e[3m"
 set-option -sa terminal-overrides "xterm*:ritm=\e[23m"
